--- a/src/LBF/MainBundle/Resources/views/Main/cart.html.twig
+++ b/src/LBF/MainBundle/Resources/views/Main/cart.html.twig
@@ -45,9 +45,9 @@
 
 		        <div id="breadcrumb" class="center row80">
 			        <div class="row">
-		              	<h3>
+		              	<h2>
 		                  	{{ 'header.titles.myCart' | trans }}
-		              	</h3>
+		              	</h2>
 		            </div>
 		            <div class="row">
 	                  	<div class="inline_div breadcrumb_active">
@@ -355,8 +355,7 @@
 		                      </table>
 		                    </div>
 		                    <div class="row">
-		                      <div class="col-md-4 col-xs-4"></div>
-		                      <div class="col-md-4 col-xs-4 cart_price">
+		                      <div class="cart_price">
 		                        <div class="row">
 		                          <div class="inline_div left col-md-4 col-xs-4">
 		                          	{{ 'cart.titles.total' | trans }}
@@ -373,7 +372,6 @@
 		                          </div>
 		                        </div>
 		                      </div>
-		                      <div class="col-md-4 col-xs-4"></div>
 		                    </div>
 		                {% else %}
 		                    <div class="row center">
