--- a/app/Resources/views/includes/footer.html.twig
+++ b/app/Resources/views/includes/footer.html.twig
@@ -83,7 +83,7 @@
 	            	<div class="col-md-2">
 		                <label class="control-label" for="corpsMail">Message</label>
 	            	</div>
-	                <div class="input-icon col-md-10">
+	                <div class="input-icon col-md-100">
 	                	<textarea class="form-control placeholder-no-fix" name="corpsMail" id="corpsMail" placeholder="Message"></textarea>
 	                </div>
 	            </div>
@@ -94,7 +94,7 @@
 	</div>
 	<br/>
 	<div class="row border_white_top multiple_lists footer_part">
-		<div class="col-md-4 col-xs-4">
+		<div class="col-md-4">
 			<h4>
 				{{ 'footer.titles.receiveOurNewsletter' | trans }}
 			</h4>
@@ -114,7 +114,7 @@
 				</div>
 			</form>
 		</div>
-		<div class="col-md-4 col-xs-4">
+		<div class="col-md-4">
 	 		<a href="/temoignages">
 		 	<h4>
 		 		{{ 'footer.titles.witnesses' | trans }}
@@ -125,7 +125,7 @@
 		 	</div>
 		 	</a>
 		</div>
-		<div class="col-md-4 col-xs-4">
+		<div class="col-md-4">
 		 	<h4>
 		 		{{ 'footer.titles.clientService' | trans }}
 		 	</h4>
@@ -140,7 +140,7 @@
 		</div>
 	</div>
 	<div class="row left border_white_top multiple_list footer_part footer_bottom">
-		<div class="col-md-3 col-xs-3">
+		<div class="col-md-3">
 			<h4>
 			 	{{ 'footer.titles.aboutUs' | trans }}
 			</h4>
@@ -162,7 +162,7 @@
 				</li>
 			</ul>
 		</div>
-		<div class="col-md-3 col-xs-3"> 
+		<div class="col-md-3"> 
 			<h4>
 			 	{{ 'footer.titles.needHelp' | trans }}
 			</h4>
@@ -189,7 +189,7 @@
 				</li> 	
 			</ul>
 		</div>
-		<div class="col-md-3 col-xs-3">
+		<div class="col-md-3">
 		  	<h4>
 		  		{{ 'footer.titles.meatPanel' | trans }}
 		  	</h4>
@@ -211,7 +211,7 @@
 				</li>
 			</ul>
 		</div>
-		<div class="col-md-3 col-xs-3">
+		<div class="col-md-3">
 		  	<h4>
 		  		{{ 'footer.titles.blog' | trans }}
 		  	</h4>
